# hsimplesearch

./: README.md  hsimplesearch.cabal  lotr.txt
src/: Main.hs
src/Search/: Indexer.hs  Interpreter.hs  Query.hs  Utils.hs
